--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,21 +8,20 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
-
+  pypi-publish:
+    name: upload release to PyPI
     runs-on: ubuntu-latest
-
+    environment: release
+    permissions:
+      id-token: write
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.8'
-    - name: Build
-      run: |
-        bash build_scripts/build.sh
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+      - uses: actions/checkout@v3
+      - name: Python Setup
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.8'
+      - name: Build
+        run: |
+          bash build_scripts/build.sh
+      - name: Publish
+        uses: pypa/gh-action-pypi-publish@release/v1
