Remove dev_build.sh

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,4 +23,4 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Build
       run: |
-        bash build_scripts/build.sh
+        bash build.sh
