--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,6 @@ jobs:
           python-version: '3.8'
       - name: Build
         run: |
-          bash build_scripts/build.sh
+          bash build.sh
       - name: Publish
         uses: pypa/gh-action-pypi-publish@release/v1
