--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     hooks:
       - id: build
         name: build
-        entry: bash 'build_scripts/build.sh'
+        entry: bash 'build.sh'
         language: system
         types: [ python ]
         pass_filenames: false
