Implement AvlTree.between()

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,8 @@ pretty = true
 [[tool.mypy.overrides]]
 module = "assertpy"
 ignore_missing_imports = true
+
+[tool.coverage.report]
+exclude_also = [
+    "break", # https://github.com/nedbat/coveragepy/issues/772
+]
