--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,3 +25,5 @@ jobs:
           bash build.sh
       - name: Publish
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: ./build/build
