--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,14 +17,15 @@ Homepage = "https://github.com/cfandrews/PythonAvlTree"
 
 [project.optional-dependencies]
 build = [
+    "pre-commit==3.5.0",
     "isort==5.12.0",
     "ruff==0.1.3",
     "mypy==1.6.1",
     "pytest==7.4.3",
     "assertpy==1.1",
     "pytest-cov==4.1.0",
-    "pre-commit==3.5.0",
     "build==1.0.3",
+    "pdoc==14.1.0"
 ]
 
 [tool.ruff]
@@ -34,6 +35,7 @@ ignore = [
     "E203",   # Whitespace before ':'
 ]
 preview = true
+cache-dir = "./build/ruff"
 
 [tool.ruff.pydocstyle]
 convention = "google"
@@ -44,6 +46,7 @@ src_paths = ["src", "tests"]
 
 [tool.pytest.ini_options]
 addopts = "--cov=avltree --cov-fail-under=100 --cov-report=term-missing tests"
+cache_dir = "./build/pytest"
 
 [tool.mypy]
 files = ["src", "tests"]
@@ -58,3 +61,6 @@ ignore_missing_imports = true
 exclude_also = [
     "break", # https://github.com/nedbat/coveragepy/issues/772
 ]
+
+[tool.coverage.run]
+data_file = "./build/coverage"
