--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -11,7 +11,7 @@ jobs:
   pypi-publish:
     name: PyPI
     runs-on: ubuntu-latest
-    environment: publish
+    environment: PyPI
     permissions:
       id-token: write
     steps:
