Change documentation.yml and publish.yml to use Python 3.11

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Python Setup
         uses: actions/setup-python@v3
         with:
-          python-version: '3.8'
+          python-version: 3.11
       - name: Build
         run: |
           bash build.sh
