--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,18 +16,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.8
+      - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: 3.8
+          python-version: 3.11
       - name: Build
         run: |
           bash build.sh
-      - name: Setup Pages
+      - name: Configure Pages
         uses: actions/configure-pages@v3
       - name: Upload Artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./build/pdoc
-      - name: Deploy to GitHub Pages
+      - name: Deploy Pages
         uses: actions/deploy-pages@v2
