Use reusable python-build workflow in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,23 +2,13 @@ name: Build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
+  schedule:
+    - cron: "0 0 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Build
-      run: |
-        bash build.sh
+    uses: cfandrews/ReusableWorkflows/.github/workflows/python-build.yml@main
